# pkg/response/like_response.go
@@ -1,0 +1,6 @@
+package response
+
+type LikeResponse struct {
+	Status  string `json:"status"`
+	Message string `json:"message"`
+}
